# flusseract

./: .envrc  .gitignore  .metadata  .pubignore  CHANGELOG.md  LICENSE  README.md  ffigen.yaml  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  clean.sh  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/ai/letterassist/flusseract_example/: MainActivity.kt
example/assets/: tessconfig
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt  my_application.cc
example/linux/flutter/: generated_plugins.cmake
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: flusseract.podspec
ios/Classes/: logger.c
lib/: flusseract.dart  flusseract_bindings.dart  flusseract_bindings_generated.dart  logger.dart  pix_image.dart  tessdata.dart  tesseract.dart
linux/: CMakeLists.txt
macos/: flusseract.podspec
macos/Classes/: flusseract.c
src/: CMakeLists.txt  common.h  flusseract.c  flusseract.cpp  flusseract.h  logfns.h  logger.c  logger.h
src/cmake/: BuildFunctions.cmake  ext-create-combined-library.sh  ext-run-cmake-for-android.sh  ext-run-cmake-for-darwin.sh
src/leptonica/: CMakeLists.txt  cmake-android.sh  cmake-apple.sh  cmake-darwin.sh  patch.sh
src/leptonica/patch/: CMakeLists.txt
src/libjpeg/: CMakeLists.txt  cmake-android.sh  cmake-apple.sh  cmake-darwin.sh
src/libleptonica/: CMakeLists.txt  cmake-android.sh  cmake-darwin.sh  cmake-patch.sh
src/libpng/: CMakeLists.txt  cmake-android.sh  cmake-apple.sh  cmake-darwin.sh
src/libtesseract/: CMakeLists.txt  cmake-android.sh  cmake-darwin.sh  cmake-patch.sh
src/libtiff/: CMakeLists.txt  cmake-android.sh  cmake-apple.sh  cmake-darwin.sh
src/libzstd/: CMakeLists.txt  cmake-android.sh  cmake-apple.sh  cmake-darwin.sh
src/tesseract/: CMakeLists.txt  cmake-apple.sh  cmake-darwin.sh  patch.sh
src/tesseract/patch/: CMakeLists.txt
test/: tesseract_test.dart
test/data/: tessconfig
test/data/images/: test-business-letter.tiff
windows/: CMakeLists.txt
